<resources>
    <string name="app_name">OctomatePrototype</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_profile_image">Profile Image</string>
    <string name="label_clock_in">Clock In</string>
    <string name="label_announcements">Announcements</string>
    <string name="label_view_all">View All</string>
    <string name="dummy_title_announcement">Adecco</string>
    <string name="dummy_subtitle_announcement">A warm welcome onboard</string>
    <string name="dummy_body_announcement">Hi all, here is a quick onboarding document to get you started</string>
    <string name="label_read_more">Read More</string>
    <string name="label_reminders">Reminders</string>
    <string name="label_shutter_button">Shutter Button</string>
    <string name="label_next">Next</string>
    <string name="label_preview_image">Preview Image</string>
    <string name="label_confirm_time_in">Confirm Time In</string>
    <string name="label_home">Home</string>
    <string name="label_profile">Profile</string>
    <string name="label_assignments">Assignments</string>
    <string name="label_timesheet">Timesheet</string>
    <string name="label_claims">Claims</string>
    <string name="label_leave">Leave</string>
    <string name="label_roster">Roster</string>
    <string name="label_payslip">Payslip</string>
    <string name="label_settings">Settings</string>
    <string name="label_my_wallet">My Wallet</string>
    <string name="label_logout">Logout</string>
    <string name="label_edit">Edit</string>
    <string name="label_selfie_instruction">Please Take a Selfie</string>
    <string name="label_submit">Submit</string>
    <string name="error_missing_location_permission">Please enable location service to use this app</string>
    <string name="label_current_position">Current position</string>
    <string name="label_time_in">Time In</string>
    <string name="label_recapture_location">Recapture Location</string>
    <string name="label_not_correct">\"Not Correct? \"</string>
    <string name="label_current_location_acc">\"Current location, accuracy \"</string>
    <string name="label_meter">\" meter(s)\"</string>
    <string name="error_missing_camera_permission">Please allow camera permission to use this app</string>
    <string name="label_notification">Notification</string>
    <string name="label_app_name">octomate</string>
</resources>