<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:orientation="vertical"
    tools:context=".view.login.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:fontFamily="@font/nunitosans_bold"
        android:gravity="center"
        android:text="@string/label_app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidthFocused="1dp"
        app:expandedHintEnabled="false"
        app:hintTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="E-mail"
        app:placeholderTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="mary5@test.com"
            android:background="@android:color/transparent"
            android:hint="@string/label_username"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="24dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidthFocused="1dp"
        android:textColorHint="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:expandedHintEnabled="false"
        app:hintTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tilUsername"
        app:placeholderText="Password"
        app:placeholderTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/label_password"
            android:text="12345678"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_white"
        android:fontFamily="@font/nunitosans_bold"
        android:text="@string/label_login"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <ProgressBar
        android:id="@+id/pbLogin"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunitosans_regular"
        android:gravity="center"
        android:text="@string/label_forgot_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</LinearLayout>