<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.timein.TimeInSelfieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/containerPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="96dp">

            <androidx.camera.view.PreviewView
                android:id="@+id/previewCam"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="#ECF8F7"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nunitosans_bold"
                    android:gravity="center"
                    android:text="@string/label_selfie_instruction"
                    android:textAlignment="center"

                    android:textColor="#5D6161" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <ImageView
            android:id="@+id/imgShutter"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/label_shutter_button"
            android:src="@drawable/ic_record"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerPreview" />

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/nunitosans_bold"
            android:padding="4dp"
            android:text="@string/label_next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imgShutter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerPreview" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="112dp"
        android:layout_height="164dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/label_preview_image"
        tools:src="@drawable/placeholder_image" />

</FrameLayout>