<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="18dp"
    android:background="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgOval"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/bg_oval_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/nunitosans_bold"
            android:text="@string/dummy_title_announcement"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/imgOval"
            app:layout_constraintStart_toEndOf="@id/imgOval"
            app:layout_constraintTop_toTopOf="@+id/imgOval" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_bold"
            android:text="07/10/2019"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nunitosans_bold"
            android:text="@string/dummy_subtitle_announcement"
            android:textColor="@color/primary"
            app:layout_constraintStart_toStartOf="@+id/imgOval"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nunitosans_bold"
            android:text="@string/dummy_body_announcement"
            app:layout_constraintStart_toStartOf="@id/tvSubtitle"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

        <FrameLayout
            android:layout_width="80dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/tvBody"
            app:layout_constraintTop_toTopOf="@+id/textView">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="#E6E6E6"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/tvTag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/nunitosans_bold"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:text="General" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/label_read_more"
            android:textColor="@color/primary_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBody" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>